--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dropbox</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
-<body>
+<body class="debug">
     
+    <header class="main-header">
+        <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
+        <nav class="nav">
+            <ul class="nav__menu">
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+            </ul>
+        </nav>
+        <ul class="utility">
+            <li><a href="#">link</a></li>
+            <li><a href="#">link</a></li>
+            <li><button class="button">button</button></li>
+            <li><button class="button">button</button></li>
+        </ul>
+    </header>
+
 </body>
 </html>
