--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
         <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
         <nav class="nav">
             <ul class="nav__menu">
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Funzioni</a></li>
+                <li><a href="#">Piani e Prezzi</a></li>
             </ul>
         </nav>
         <ul class="utility">
-            <li><a href="#">link</a></li>
-            <li><a href="#">link</a></li>
-            <li><button class="button">button</button></li>
-            <li><button class="button">button</button></li>
+            <li><a href="#">Supporto</a></li>
+            <li><a href="#">Contatta l'ufficio vendite</a></li>
+            <li><button class="button">Accedi</button></li>
+            <li><button class="button">Inizia</button></li>
         </ul>
     </header>
 
