--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
+    <script src="https://kit.fontawesome.com/1e0e3edb9d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body class="debug">
@@ -25,6 +26,29 @@
             <li><button class="button">Inizia</button></li>
         </ul>
     </header>
+
+    <main>
+
+        <section class="hero">
+            <div class="container-large">
+                <div class="hero__header">
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                </div>
+                <div class="hero__body flex">
+                    <div class="col-30">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quos doloribus libero numquam non hic officia odio consequatur, perspiciatis nostrum incidunt necessitatibus unde deleniti, laboriosam illo voluptatum voluptatibus aliquid atque.</p>
+                        <button>Inizia la tua prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+                    <div class="col-70">
+                        <img src="img/jumbo.png" alt="shermata Dropbox">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
 </body>
 </html>
