--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <script src="https://kit.fontawesome.com/1e0e3edb9d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
+
 </head>
 <body class="debug">
     
-    <header class="main-header">
+    <header class="main-header flex">
         <img class="logo" src="img/logo-small.png" alt="logo Dropbox">
         <nav class="nav">
             <ul class="nav__menu">
