--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="utility">
             <li><a href="#">Supporto</a></li>
             <li><a href="#">Contatta l'ufficio vendite</a></li>
-            <li><button class="button">Accedi</button></li>
+            <li><button>Accedi</button></li>
             <li><button class="button">Inizia</button></li>
         </ul>
     </header>
@@ -36,17 +36,42 @@
         <section class="hero">
             <div class="container-large">
                 <div class="hero__header">
-                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                    <h1 class="title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 </div>
                 <div class="hero__body flex">
                     <div class="col-30">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quos doloribus libero numquam non hic officia odio consequatur, perspiciatis nostrum incidunt necessitatibus unde deleniti, laboriosam illo voluptatum voluptatibus aliquid atque.</p>
-                        <button>Inizia la tua prova gratuita</button>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quos doloribus libero numquam non hic officia odio consequatur, perspiciatis nostrum incidunt necessitatibus unde deleniti, laboriosam illo voluptatum voluptatibus aliquid atque.</p>
+                        <button class="button">Inizia la tua prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
                     <div class="col-70">
                         <img src="img/jumbo.png" alt="shermata Dropbox">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <h2 class="title">Trova il piano business che fa per te</h2>
+            </div>
+            <div class="container">
+                <div class="radio-buttons">
+                    <span>Fatturazione mensile</span>
+                    <span>Fatturazione mensile</span>
+                </div>
+                <div class="cards">
+                    <div class="row">
+                        <div class="col col-4">
+                            <div class="card">testo</div>
+                        </div>
+                        <div class="col col-4">
+                            <div class="card-4">testo</div>
+                        </div>
+                        <div class="col col-4">
+                            <div class="card">testo</div>
+                        </div>
                     </div>
                 </div>
             </div>
