--- a/index.html
+++ b/index.html
@@ -52,19 +52,28 @@
             </div>
         </section>
 
-        <section>
-            <div class="container">
+        <section class="section">
+            <div class="container section__header">
                 <h2 class="title">Trova il piano business che fa per te</h2>
             </div>
-            <div class="container">
+            <div class="container section__body">
                 <div class="radio-buttons">
-                    <span>Fatturazione mensile</span>
-                    <span>Fatturazione mensile</span>
+                    <span><i class="fa-solid fa-circle-dot"></i> Fatturazione mensile</span>
+                    <span><i class="fa-solid fa-circle-dot"></i> Fatturazione annuale</span>
                 </div>
                 <div class="cards">
                     <div class="row">
                         <div class="col col-4">
-                            <div class="card">testo</div>
+                            <div class="card">
+                                <div class="card__header">
+                                    <p><i class="fa-solid fa-user"></i>Singolo</p>
+                                </div>
+                                <div class="card__body">
+                                    <h3>Professional</h3>
+                                    <p>€ 12.00</p>
+                                    <p>/mese</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col col-4">
                             <div class="card-4">testo</div>
