--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="utility">
             <li><a href="#">Supporto</a></li>
             <li><a href="#">Contatta l'ufficio vendite</a></li>
-            <li><button>Accedi</button></li>
+            <li><button class="button button-white">Accedi</button></li>
             <li><button class="button">Inizia</button></li>
         </ul>
     </header>
@@ -72,6 +72,13 @@
                                     <h3>Professional</h3>
                                     <p>€ 12.00</p>
                                     <p>/mese</p>
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
+                                    </ul>
+                                    <a class="button" href="#">Prova gratis per 30 giorni</a>
+                                    <p>oppure <a href="#">acquista ora</a></p>
                                 </div>
                             </div>
                         </div>
