--- a/index.html
+++ b/index.html
@@ -69,24 +69,76 @@
                                     <p><i class="fa-solid fa-user"></i>Singolo</p>
                                 </div>
                                 <div class="card__body">
-                                    <h3>Professional</h3>
-                                    <p>€ 12.00</p>
-                                    <p>/mese</p>
+                                    <h3 class="title">Professional</h3>
+                                    <p class="price">€ 12.00</p>
+                                    <p class="rinnovo">/mese</p>
                                     <ul>
                                         <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
                                         <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
                                         <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
                                     </ul>
-                                    <a class="button" href="#">Prova gratis per 30 giorni</a>
+                                    <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
                                     <p>oppure <a href="#">acquista ora</a></p>
+                                    <hr>
+                                    <h4>Punti salienti del piano</h4>
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col col-4">
-                            <div class="card-4">testo</div>
+                            <div class="card-4">
+                                <div class="card">
+                                    <div class="card__header">
+                                        <p><i class="fa-solid fa-user"></i>Singolo</p>
+                                    </div>
+                                    <div class="card__body">
+                                        <h3 class="title">Professional</h3>
+                                        <p class="price">€ 12.00</p>
+                                        <p class="rinnovo">/mese</p>
+                                        <ul>
+                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
+                                        </ul>
+                                        <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
+                                        <p>oppure <a href="#">acquista ora</a></p>
+                                        <hr>
+                                        <h4>Punti salienti del piano</h4>
+                                        <ul>
+                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="col col-4">
-                            <div class="card">testo</div>
+                            <div class="card">
+                                <div class="card__header">
+                                    <p><i class="fa-solid fa-user"></i>Singolo</p>
+                                </div>
+                                <div class="card__body">
+                                    <h3 class="title">Professional</h3>
+                                    <p class="price">€ 12.00</p>
+                                    <p class="rinnovo">/mese</p>
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
+                                    </ul>
+                                    <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                    <hr>
+                                    <h4>Punti salienti del piano</h4>
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
