--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span><i class="fa-solid fa-circle-dot"></i> Fatturazione annuale</span>
                 </div>
                 <div class="cards">
-                    <div class="row">
+                    <div class="row row-margin">
                         <div class="col col-4">
                             <div class="card">
                                 <div class="card__header">
@@ -157,6 +157,21 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="partner" class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-60">
+                        <img src="img/partner.png" alt="due persone che parlano">
+                    </div>
+                    <div class="col-40">
+                        <h3>Entra in contatto con un partner Dropbox</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam architecto nesciunt vero aliquid placeat magni ab consequatur enim quisquam fuga?</p>
+                        <a class="button" href="#">Trova un partner</a>
                     </div>
                 </div>
             </div>
