applicato stile sezione partner

--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
         <section id="partner" class="section">
             <div class="container">
                 <div class="row">
-                    <div class="col-60">
+                    <div class="col-60 section__image">
                         <img src="img/partner.png" alt="due persone che parlano">
                     </div>
-                    <div class="col-40">
-                        <h3>Entra in contatto con un partner Dropbox</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam architecto nesciunt vero aliquid placeat magni ab consequatur enim quisquam fuga?</p>
-                        <a class="button" href="#">Trova un partner</a>
+                    <div class="col-40 section__content">
+                        <h3 class="section__title">Entra in contatto con un partner Dropbox</h3>
+                        <p class="section__description">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <a class="button button--outlined" href="#">Trova un partner</a>
                     </div>
                 </div>
             </div>
