--- a/index.html
+++ b/index.html
@@ -177,6 +177,22 @@
             </div>
         </section>
 
+        <section id="operations" class="section">
+            <div class="container">
+                <h2 class="section__title">Esegui più oerazioni con Dropbox business</h2>
+            </div>
+            <div class="container">
+                <div class="row row-margin">
+                    <div class="col col-4">1</div>
+                    <div class="col col-4">2</div>
+                    <div class="col col-4">3</div>
+                    <div class="col col-4">4</div>
+                    <div class="col col-4">5</div>
+                    <div class="col col-4">6</div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
