--- a/index.html
+++ b/index.html
@@ -177,18 +177,54 @@
             </div>
         </section>
 
-        <section id="operations" class="section">
+        <section id="features" class="section">
             <div class="container">
-                <h2 class="section__title">Esegui più oerazioni con Dropbox business</h2>
+                <h2 class="section__title">Esegui più operazioni con Dropbox Business</h2>
             </div>
             <div class="container">
                 <div class="row row-margin">
-                    <div class="col col-4">1</div>
-                    <div class="col col-4">2</div>
-                    <div class="col col-4">3</div>
-                    <div class="col col-4">4</div>
-                    <div class="col col-4">5</div>
-                    <div class="col col-4">6</div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="feature">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
+                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
