aggiornamento contenuti card sezione operazioni

--- a/index.html
+++ b/index.html
@@ -185,44 +185,44 @@
                 <div class="row row-margin">
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="illustrazione condivisione file">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-send-files-it.png" alt="screenshot invio file">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-coordinate-it.png" alt="screenshot coordinate">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-integrations-it.png" alt="screenshot integrazione">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-multi-device.png" alt="illustrazione Dropbox multidevice">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="feature">
-                            <img class="feature__image" src="img/business-feature-switching-tools.png" alt="">
+                            <img class="feature__image" src="img/business-feature-security.png" alt="illustrazione sicurezza Dropbox">
                             <h3  class="feature__title">Passa di meno da uno strumento all'altro</h3>
-                            <p class="feature__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quaerat incidunt expedita laudantium quasi voluptatem facilis quae alias sapiente nobis.</p>
+                            <p class="feature__description">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
                         </div>
                     </div>
                 </div>
