--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
             </div>
         </section>
 
+        <section id="team" class="section">
+            <div class="container">
+                <div class="content__wrapper">
+                    <h2 class="section__title">Più di 500.000 team utilizzano Dropbox Business</h2>
+                    <a class="section__link" href="#">Scopri di più sui nostri clienti</a>
+                </div>
+            </div>
+            <div class="container-100">ciao</div>
+        </section>
+
     </main>
 
 </body>
