--- a/index.html
+++ b/index.html
@@ -236,7 +236,21 @@
                     <a class="section__link" href="#">Scopri di più sui nostri clienti</a>
                 </div>
             </div>
-            <div class="container-100">ciao</div>
+            <div class="container-100">
+                <div class="col-4 row">
+                    <div class="col-6">1</div>
+                    <div class="col-6">2</div>
+                    <div class="col-6">3</div>
+                    <div class="col-6">4</div>
+                </div>
+                <div class="col-4">2</div>
+                <div class="col-4 row">
+                    <div class="col-6">1</div>
+                    <div class="col-6">2</div>
+                    <div class="col-6">3</div>
+                    <div class="col-6">4</div>
+                </div>
+            </div>
         </section>
 
     </main>
