aggiunto colonna loghi

--- a/index.html
+++ b/index.html
@@ -237,18 +237,34 @@
                 </div>
             </div>
             <div class="container-100">
-                <div class="col-4 row">
-                    <div class="col-6">1</div>
-                    <div class="col-6">2</div>
-                    <div class="col-6">3</div>
-                    <div class="col-6">4</div>
+                <div class="col-4 team__logos row">
+                    <div class="col-6 logo-wrapper wrapper--light-green">
+                        <img class="logo" src="img/designit.svg" alt="logo Designit">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--dark-pink">
+                        <img class="logo" src="img/arizona_state_university.svg" alt="logo ASU">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--blue">
+                        <img class="logo" src="img/university_of_florida.svg" alt="logo UF">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--red">
+                        <img class="logo" src="img/topps.svg" alt="logo Topps">
+                    </div>
                 </div>
                 <div class="col-4">2</div>
                 <div class="col-4 row">
-                    <div class="col-6">1</div>
-                    <div class="col-6">2</div>
-                    <div class="col-6">3</div>
-                    <div class="col-6">4</div>
+                    <div class="col-6 logo-wrapper wrapper--light-green">
+                        <img class="logo" src="img/designit.svg" alt="logo Designit">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--dark-pink">
+                        <img class="logo" src="img/arizona_state_university.svg" alt="logo ASU">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--blue">
+                        <img class="logo" src="img/university_of_florida.svg" alt="logo UF">
+                    </div>
+                    <div class="col-6 logo-wrapper wrapper--red">
+                        <img class="logo" src="img/topps.svg" alt="logo Topps">
+                    </div>
                 </div>
             </div>
         </section>
