aggiunto colonna team description

--- a/index.html
+++ b/index.html
@@ -251,7 +251,17 @@
                         <img class="logo" src="img/topps.svg" alt="logo Topps">
                     </div>
                 </div>
-                <div class="col-4">2</div>
+                <div class="col-4 team__description">
+                    <img class="logo" src="img/designit.svg" alt="logo Designit">
+                    <div class="quote">
+                        <p class="quote__text">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias consectetur accusamus suscipit sed, animi necessitatibus vel debitis itaque sequi iure.
+                            Velit consequuntur vitae, porro dolorem nulla eius debitis. Fugiat quae quam nobis earum in omnis veritatis harum libero cumque minus!
+                            Dolores vel tempore atque harum a? Magni, nemo. Architecto dolorum, ducimus amet explicabo illum voluptatibus corporis magni incidunt possimus qui.
+                        </p>
+                        <p class="quote__author">Morten Thomsen, Global IT Lead</p>
+                    </div>
+                </div>
                 <div class="col-4 row">
                     <div class="col-6 logo-wrapper wrapper--light-green">
                         <img class="logo" src="img/designit.svg" alt="logo Designit">
