aggiornamento contenuti sezione loghi team

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
             <div class="container-100">
                 <div class="col-4 team__logos row">
-                    <div class="col-6 logo-wrapper wrapper--light-green">
+                    <div class="col-6 logo-wrapper selected wrapper--light-green">
                         <img class="logo" src="img/designit.svg" alt="logo Designit">
                     </div>
                     <div class="col-6 logo-wrapper wrapper--dark-pink">
@@ -255,25 +255,23 @@
                     <img class="logo" src="img/designit.svg" alt="logo Designit">
                     <div class="quote">
                         <p class="quote__text">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias consectetur accusamus suscipit sed, animi necessitatibus vel debitis itaque sequi iure.
-                            Velit consequuntur vitae, porro dolorem nulla eius debitis. Fugiat quae quam nobis earum in omnis veritatis harum libero cumque minus!
-                            Dolores vel tempore atque harum a? Magni, nemo. Architecto dolorum, ducimus amet explicabo illum voluptatibus corporis magni incidunt possimus qui.
+                            "I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper".
                         </p>
                         <p class="quote__author">Morten Thomsen, Global IT Lead</p>
                     </div>
                 </div>
                 <div class="col-4 row">
-                    <div class="col-6 logo-wrapper wrapper--light-green">
-                        <img class="logo" src="img/designit.svg" alt="logo Designit">
+                    <div class="col-6 logo-wrapper wrapper--dark-red">
+                        <img class="logo" src="img/world_bicycle_relief.svg" alt="logo World Bicycle Relief">
                     </div>
-                    <div class="col-6 logo-wrapper wrapper--dark-pink">
-                        <img class="logo" src="img/arizona_state_university.svg" alt="logo ASU">
+                    <div class="col-6 logo-wrapper wrapper--light-blue">
+                        <img class="logo" src="img/hearst_corp.svg" alt="logo Heart Corp">
                     </div>
-                    <div class="col-6 logo-wrapper wrapper--blue">
-                        <img class="logo" src="img/university_of_florida.svg" alt="logo UF">
+                    <div class="col-6 logo-wrapper wrapper--dark-blue">
+                        <img class="logo" src="img/lonely_planet.svg" alt="logo Lonely Planet">
                     </div>
-                    <div class="col-6 logo-wrapper wrapper--red">
-                        <img class="logo" src="img/topps.svg" alt="logo Topps">
+                    <div class="col-6 logo-wrapper wrapper--yellow">
+                        <img class="logo" src="img/clear_channel.svg" alt="logo Clear Channel">
                     </div>
                 </div>
             </div>
