aggiunta sezione prova gratuita

--- a/index.html
+++ b/index.html
@@ -277,6 +277,19 @@
             </div>
         </section>
 
+        <section id="free-trial" class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <h2 class="section__title">Porta Dropbox Business nella tua azienda</h2>
+                    </div>
+                    <div class="col-6">
+                        <a class="button button--white" href="#">Inizia la tua prova gratuita</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 </body>
