aggiunta sezione domande frequenti

--- a/index.html
+++ b/index.html
@@ -290,6 +290,28 @@
             </div>
         </section>
 
+        <section id="faq" class="section">
+            <div class="container">
+                <h2 class="section__title">Domande Frequenti</h2>
+            </div>
+            <div class="container">
+                <ul class="accordion">
+                    <li class="accordion__item">
+                        <h3 class="accordion__title">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </li>
+                    <li class="accordion__item">
+                        <h3 class="accordion__title">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </li>
+                    <li class="accordion__item">
+                        <h3 class="accordion__title">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h3>
+                        <i class="fa-solid fa-angle-down"></i>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 
 </body>
