modificato contenuti footer

--- a/index.html
+++ b/index.html
@@ -314,12 +314,12 @@
 
     </main>
 
-    <footer class="main-footer">
+    <footer class="main-footer footer">
         <div class="container-large">
             <div class="row footer-content">
                 <div class="col">
-                    <h4>Dropbox</h4>
-                    <ul>
+                    <h4 class="footer__title">Dropbox</h4>
+                    <ul class="footer__links">
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
                         <li><a href="#">Piani</a></li>
@@ -328,8 +328,8 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h4>Dropbox</h4>
-                    <ul>
+                    <h4 class="footer__title">Prodotti</h4>
+                    <ul class="footer__links">
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
                         <li><a href="#">Piani</a></li>
@@ -338,8 +338,8 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h4>Dropbox</h4>
-                    <ul>
+                    <h4 class="footer__title">Azienda</h4>
+                    <ul class="footer__links">
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
                         <li><a href="#">Piani</a></li>
@@ -348,8 +348,8 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h4>Dropbox</h4>
-                    <ul>
+                    <h4 class="footer__title">Supporto</h4>
+                    <ul class="footer__links">
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
                         <li><a href="#">Piani</a></li>
@@ -358,8 +358,8 @@
                     </ul>
                 </div>
                 <div class="col">
-                    <h4>Dropbox</h4>
-                    <ul>
+                    <h4 class="footer__title">Community</h4>
+                    <ul class="footer__links">
                         <li><a href="#">Applicazione desktop</a></li>
                         <li><a href="#">Perchè Dropbox</a></li>
                         <li><a href="#">Piani</a></li>
