aggiunto selettore di lingua

--- a/index.html
+++ b/index.html
@@ -368,6 +368,16 @@
                     </ul>
                 </div>
             </div>
+            <hr>
+        </div>
+        <div class="container-large select-wrapper">
+            <div class="select-lang">
+                <i class="fa-solid fa-earth-americas"></i>
+                <select>
+                    <option value="IT">Italiano</option>
+                    <option value="EN">Inglese</option>
+                </select>
+            </div>
         </div>
     </footer>
 
