--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
         <section class="hero">
             <div class="container-large">
-                <div class="hero__header">
-                    <h1 class="title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                </div>
-                <div class="hero__body flex">
-                    <div class="col-30">
-                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quos doloribus libero numquam non hic officia odio consequatur, perspiciatis nostrum incidunt necessitatibus unde deleniti, laboriosam illo voluptatum voluptatibus aliquid atque.</p>
-                        <button class="button">Inizia la tua prova gratuita</button>
+                <h1 class="hero__title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+            <div class="container-large">
+                <div class="row">
+                    <div class="col-30 hero__content">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <a class="button button--blue" href="#">Inizia la tua prova gratuita</a>
                         <p>Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
-                    <div class="col-70">
+                    <div class="col-70 hero__image">
                         <img src="img/jumbo.png" alt="shermata Dropbox">
                     </div>
                 </div>
