--- a/index.html
+++ b/index.html
@@ -52,14 +52,20 @@
             </div>
         </section>
 
-        <section class="section">
-            <div class="container section__header">
-                <h2 class="title">Trova il piano business che fa per te</h2>
+        <section id="plan" class="section">
+            <div class="container">
+                <h2 class="section__title">Trova il piano business che fa per te</h2>
             </div>
-            <div class="container section__body">
-                <div class="radio-buttons">
-                    <span><i class="fa-solid fa-circle-dot"></i> Fatturazione mensile</span>
-                    <span><i class="fa-solid fa-circle-dot"></i> Fatturazione annuale</span>
+            <div class="container">
+                <div class="radio-wrapper">
+                    <span class="radio-button checked">
+                        <i class="fa-regular fa-circle"></i>
+                        Fatturazione mensile
+                    </span>
+                    <span class="radio-button">
+                        <i class="fa-regular fa-circle"></i>
+                        Fatturazione annuale
+                    </span>
                 </div>
                 <div class="cards">
                     <div class="row row-margin">
