--- a/index.html
+++ b/index.html
@@ -67,9 +67,52 @@
                         Fatturazione annuale
                     </span>
                 </div>
-                <div class="cards">
-                    <div class="row row-margin">
-                        <div class="col col-4">
+                <div class="row row-margin">
+                    <div class="col col-4">
+                        <div class="card">
+                            <div class="card__header">
+                                <p>
+                                    <i class="fa-solid fa-user"></i>
+                                    Singolo
+                                </p>
+                            </div>
+                            <div class="card__body">
+                                <h3 class="card__title">Professional</h3>
+                                <p class="card__price">€ 12.00</p>
+                                <p class="card__frequency">/mese</p>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-user"></i>
+                                        1 utente
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-folder"></i>
+                                        5 TB di spazio di archiviazione sicuro
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        Funzioni di produttività premium e condizivisione file semplice e sicura
+                                    </li>
+                                </ul>
+                                <a class="button--blue" href="#">Prova gratis per 30 giorni</a>
+                                <p>oppure <a class="card__link" href="#">acquista ora</a></p>
+                                <hr>
+                                <h4 class="card__subtitle">Punti salienti del piano</h4>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Invia file fino a 100 GB con Dropbox Transfert
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Cartelle offline su dispositivi mobili
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="card-4">
                             <div class="card">
                                 <div class="card__header">
                                     <p><i class="fa-solid fa-user"></i>Singolo</p>
@@ -94,72 +137,45 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-4">
-                            <div class="card-4">
-                                <div class="card">
-                                    <div class="card__header">
-                                        <p><i class="fa-solid fa-user"></i>Singolo</p>
-                                    </div>
-                                    <div class="card__body">
-                                        <h3 class="title">Professional</h3>
-                                        <p class="price">€ 12.00</p>
-                                        <p class="rinnovo">/mese</p>
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
-                                        </ul>
-                                        <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
-                                        <p>oppure <a href="#">acquista ora</a></p>
-                                        <hr>
-                                        <h4>Punti salienti del piano</h4>
-                                        <ul>
-                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                            <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                        </ul>
-                                    </div>
-                                </div>
+                    </div>
+                    <div class="col col-4">
+                        <div class="card">
+                            <div class="card__header">
+                                <p><i class="fa-solid fa-user"></i>Singolo</p>
+                            </div>
+                            <div class="card__body">
+                                <h3 class="title">Professional</h3>
+                                <p class="price">€ 12.00</p>
+                                <p class="rinnovo">/mese</p>
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
+                                </ul>
+                                <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
+                                <p>oppure <a href="#">acquista ora</a></p>
+                                <hr>
+                                <h4>Punti salienti del piano</h4>
+                                <ul>
+                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
+                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="col col-4">
-                            <div class="card">
-                                <div class="card__header">
-                                    <p><i class="fa-solid fa-user"></i>Singolo</p>
-                                </div>
-                                <div class="card__body">
-                                    <h3 class="title">Professional</h3>
-                                    <p class="price">€ 12.00</p>
-                                    <p class="rinnovo">/mese</p>
-                                    <ul>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
-                                    </ul>
-                                    <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
-                                    <p>oppure <a href="#">acquista ora</a></p>
-                                    <hr>
-                                    <h4>Punti salienti del piano</h4>
-                                    <ul>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                    </ul>
-                                </div>
+                    </div>
+                    <div class="col col-12">
+                        <div class="card">
+                            <div class="card__header">
+                                <p><i class="fa-solid fa-user"></i>Team</p>
                             </div>
-                        </div>
-                        <div class="col col-12">
-                            <div class="card">
-                                <div class="card__header">
-                                    <p><i class="fa-solid fa-user"></i>Team</p>
+                            <div class="card__body flex">
+                                <div class="col-70">
+                                    <h3 class="title">Enterprise</h3>
+                                    <p>Contatta l'ufficio venditaìe per i prezzi</p>
+                                    <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                                 </div>
-                                <div class="card__body flex">
-                                    <div class="col-70">
-                                        <h3 class="title">Enterprise</h3>
-                                        <p>Contatta l'ufficio venditaìe per i prezzi</p>
-                                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
-                                    </div>
-                                    <div class="col-30">
-                                        <a class="button" href="#">Contatta l'ufficio vendite</a>
-                                    </div>
+                                <div class="col-30">
+                                    <a class="button" href="#">Contatta l'ufficio vendite</a>
                                 </div>
                             </div>
                         </div>
