refactoring quarta card sezione piani

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <ul class="utility">
             <li><a href="#">Supporto</a></li>
             <li><a href="#">Contatta l'ufficio vendite</a></li>
-            <li><button class="button button-white">Accedi</button></li>
-            <li><button class="button">Inizia</button></li>
+            <li><button class="button-white">Accedi</button></li>
+            <li><button class="button-blue">Inizia</button></li>
         </ul>
     </header>
 
@@ -94,7 +94,7 @@
                                         Funzioni di produttività premium e condizivisione file semplice e sicura
                                     </li>
                                 </ul>
-                                <a class="button--blue" href="#">Prova gratis per 30 giorni</a>
+                                <a class="button button--blue" href="#">Prova gratis per 30 giorni</a>
                                 <p>oppure <a class="card__link" href="#">acquista ora</a></p>
                                 <hr>
                                 <h4 class="card__subtitle">Punti salienti del piano</h4>
@@ -137,7 +137,7 @@
                                         Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                     </li>
                                 </ul>
-                                <a class="button--blue" href="#">Prova gratis per 30 giorni</a>
+                                <a class="button button--blue" href="#">Prova gratis per 30 giorni</a>
                                 <p>oppure <a class="card__link" href="#">acquista ora</a></p>
                                 <hr>
                                 <h4 class="card__subtitle">Punti salienti del piano</h4>
@@ -192,7 +192,7 @@
                                         Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
                                     </li>
                                 </ul>
-                                <a class="button--blue" href="#">Contattaci</a>
+                                <a class="button button--blue" href="#">Contattaci</a>
                                 <p>oppure <a class="card__link" href="#">acquista ora</a></p>
                                 <hr>
                                 <h4 class="card__subtitle">Punti salienti del piano</h4>
@@ -216,16 +216,19 @@
                     <div class="col col-12">
                         <div class="card">
                             <div class="card__header">
-                                <p><i class="fa-solid fa-user"></i>Team</p>
+                                <p>
+                                    <i class="fa-solid fa-building"></i>
+                                    Team
+                                </p>
                             </div>
-                            <div class="card__body flex">
-                                <div class="col-70">
-                                    <h3 class="title">Enterprise</h3>
+                            <div class="card__body">
+                                <div class="content-primary">
+                                    <h3 class="card__title">Enterprise</h3>
+                                    <a class="button button--blue" href="#">Contatta l'ufficio vendite</a>
+                                </div>
+                                <div class="content-secondary">
                                     <p>Contatta l'ufficio venditaìe per i prezzi</p>
                                     <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
-                                </div>
-                                <div class="col-30">
-                                    <a class="button" href="#">Contatta l'ufficio vendite</a>
                                 </div>
                             </div>
                         </div>
